# SyncChronize

./: pyproject.toml
api/: serializers.py  tests.py  views.py
backend/: validators.py
backend/migrations/: 0001_initial.py
syncchronize/: manage.py  urls.py  wsgi.py
syncchronize/api/: urls.py  utils.py
syncchronize/backend/: admin.py  models.py
syncchronize/syncchronize/: asgi.py  settings.py  urls.py
