[tool.poetry]
name = "syncchronize"
version = "0.1.0"
description = ""
authors = ["Umair Karel <umair.karel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
